# lappupeli

./: .gitignore  Dockerfile  Procfile  README.md  app.py  database_service.py  docker-compose.yml  docker-entrypoint.sh  game_service.py  pyproject.toml  routes.py  ruff.toml  schema.sql  tasks.py
.github/workflows/: docker.yml
lappupeli/: game_service.py
lappupeli/repositories/: card_repository.py  room_repository.py
lappupeli/templates/: index.html  room.html
lappupeli/views/: error_handler.py  index.py  login.py  room.py  template_filter.py
repositories/: card_repository.py  player_repository.py  ready_player_repository.py  room_repository.py  word_repository.py
services/: card_service.py  game_service.py  ready_players_service.py  room_service.py  word_service.py
src/: app.py  config.py  game_service.py  initialize_database.py  util.py
src/repositories/: card_repository.py  player_repository.py  room_repository.py  word_repository.py
src/static/: index.css  room.css
src/templates/: error.html  layout.html  login.html
src/views/: error_handler.py  index.py  login.py  logout.py  room.py  template_filter.py
static/: index.css  layout.css  room.css  word.css
templates/: error.html  index.html  layout.html  room.html  word.html
