[project]
name = "lappupeli"
version = "0.1.4"
description = ""
authors = [{ name = "Juho Röyskö", email = "<roysko.juho@gmail.com>" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "Flask~=3.1.0",
    "Flask-SQLAlchemy~=3.1.0",
    "python-dotenv~=1.2.0",
    "gunicorn~=23.0.0",
    "psycopg2-binary~=2.9.5",
]


[tool.poetry.group.dev.dependencies]
black = "*"
invoke = "^2.0.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"

[tool.pylint.messages_control]
disable = "missing-docstring"

[tool.pylint.TYPECHECK]
ignored-modules = "psycopg2.errors"
