[project]
name = "lappupeli"
version = "0.1.7"
description = "A game in Finnish written with Python using Flask."
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["invoke>=3.0.3", "ruff>=0.15.10"]
